[project]
name = "piiscrubber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "rich>=14.1.0",
    "spicy>=0.16.0",
    "typer>=0.19.2",
]

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
